Add frontend and update TrustNet services